Add new oauth2 version

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <title>Youtube Translator</title>
+    <title>YouTube Translator</title>
+    <link rel="stylesheet" type="text/css" href="/styles.css" />
   </head>
   <body>
-    <p>
-      Sign In with google to continue to Youtube Translator.
-      <a href="<%= url %>">click here</a>.
-    </p>
+    <div class="container">
+      <h1>YouTube Translator</h1>
+      <a href="<%= url %>" class="login-button">Login with Google</a>
+    </div>
   </body>
 </html>
